--- a/pom.xml
+++ b/pom.xml
@@ -5,18 +5,19 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.3</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>3.1.8</version> <!-- Change Spring Boot version -->
+		<relativePath/>
 	</parent>
 	<groupId>com.jaisaidev</groupId>
 	<artifactId>employee-system-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>employee-system-api</name>
-	<description>employee-system-api</description>
+	<description>Employee System API</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>17</java.version> <!-- Change Java version -->
 	</properties>
 	<dependencies>
+		<!-- Spring Boot starter dependencies -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -25,30 +26,33 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<!-- MySQL connector -->
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<!-- Lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<!-- Spring Boot test dependencies -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
+			<!-- Spring Boot Maven Plugin configuration -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<!-- Exclude Lombok during build -->
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
@@ -59,5 +63,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
